tests/rosetta/out/C/active-directory-search-for-a-user.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:15Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
typedef struct {
  const char *base;
  const char *host;
  int port;
  const char *group_filter;
} client_item_t;
typedef struct {
  int len;
  client_item_t *data;
} client_item_list_t;
client_item_list_t create_client_item_list(int len) {
  client_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(client_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int username;
  int john;
} directory_item_t;
typedef struct {
  int len;
  directory_item_t *data;
} directory_item_list_t;
directory_item_list_t create_directory_item_list(int len) {
  directory_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(directory_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int search_user(int directory, char *username) {
  return directory.data[username];
}

int main() {
  client_item_t client = (client_item_t){.base = "dc=example,dc=com",
                                         .host = "ldap.example.com",
                                         .port = 389,
                                         .group_filter = "(memberUid=%s)"};
  list_string directory = list_string_create(2);
  directory.data[0] = "admins";
  directory.data[1] = "users";
  list_string directory = list_string_create(1);
  directory.data[0] = "users";
  directory_item_t directory =
      (directory_item_t){.username = directory, .john = directory};
  int groups = search_user(&directory, "username");
  if (groups.len > 0) {
    const char *out = "Groups: [";
    int i = 0;
    while (i < groups.len) {
      char *tmp1 = concat_string(out, "\"");
      out = tmp1 + groups.data[i] + "\"";
      if (i < groups.len - 1) {
        char *tmp2 = concat_string(out, ", ");
        out = tmp2;
      }
      i = i + 1;
    }
    char *tmp3 = concat_string(out, "]");
    out = tmp3;
    printf("%s\n", out);
  } else {
    printf("User not found\n");
  }
}

int main() {
  main();
  return 0;
}
